Apr 19, 2013: libphonenumber-5.4.2
* Metadata changes:
 - Updated metadata for region code(s): BF, GA, IN, KR, MV, PH, SO, UA, US

Mar 25, 2013: libphonenumber-5.4.1
* Metadata changes:
 - Updated metadata for region code(s): BF, BH, CR, EC, IR, MG, PF, TD, TN
 - New geocoding data for country calling code(s): 374 (am, ru)
 - Updated geocoding data for country calling code(s):
   98 (en, fa), 358 (en, se), 374 (en)

Mar 07, 2013: libphonenumber-5.4
* Code changes:
 - Switch formatNumberForMobileDialing to prefer national format to international format when the
   number is dialed from the same region the phone number is from.

* Metadata changes:
 - Updated metadata for region code(s):
   BF, CD, CN, CZ, GN, IR, JP, KR, KW, LR, NZ, TT, UG, ZW
 - New geocoding data for country calling code(s): 82 (cs)
 - Updated geocoding data for country calling code(s):
   82 (en, fr, ko, zh, zh_Hant), 98 (en, fa), 263 (en)

Feb 11, 2013: libphonenumber-5.3.2
* Metadata changes:
 - Updated metadata for region code(s):
   BD, BE, BY, CA, EH, GR, IE, IN, IS, LI, MA, MU, PT, SE, SG, TL
 - New geocoding data for country calling code(s):
   375 (be, en, ru), 1 (en)

Jan 25, 2013: libphonenumber-5.3.1
* Metadata changes:
 - Updated metadata for region code(s): CN, DK, EH, GN, KH, KW, MA, MY, PA

Jan 08, 2013: libphonenumber-5.3
* Code changes:
 - Handling UAN numbers in Argentina better when dialling them locally from a
   mobile
* Metadata changes:
 - Updated metadata for region code(s):
   BE, BW, CL, CN, CO, EH, KW, MA, ML, NG, PL, SY, ZA, ZM
 - New geocoding data for country calling code(s): 32 (en, fr, nl)
 - Updated geocoding data for country calling code(s): 27 (en), 86 (en, zh)

Dec 06, 2012: libphonenumber-5.2.2
* Metadata changes:
 - New metadata for region code(s): EH
 - Updated metadata for region code(s): BR, CL, CR, IN, MA, PG, PK, RO
 - New geocoding data for country calling code(s): 241 (en)

Nov 26, 2012: libphonenumber-5.2.1
* Metadata changes: